# Samsung-catalogue-crawler

./: .gitignore  CLAUDE.md  PAGINATION_IMPROVEMENT_SUMMARY.md  README.md  curated_category_urls.txt  curated_expanded_product_urls.txt  expand_product_urls.py  expanded-list-17.06.17.49.txt  expanded_product_urls.txt  expansion_metadata.json  products.ndjson  products.parquet  pyproject.toml  requirements.txt  samsung_product_scraper.py  samsung_uk_scraper.py  samsung_url_discovery.py  test_pagination.py
.claude/commands/: context-prime.md  create_plan.md  diff_review.md  fetch docs.md  prime.md
Specs/: initial_samsung_spec.md  project_spec.md  project_spec2.md  spec.md
output/: clean_expanded_product_urls.txt  products.ndjson  products.parquet  products_v1.ndjson
