[project]
name = "property-portal-scraper"
version = "0.1.0"
description = "Automated scraper for UK property portals"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [

]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88